BSlider - Don't Use Control Mark Color

This returns BSlider to its original appearance.

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

Fixes #12578.