src/kits/interface/Slider.cpp
@@ -1015,7 +1015,7 @@ BSlider::DrawHashMarks()
 	BView* view = OffscreenView();
 
 	if (be_control_look != NULL) {
-		rgb_color base = ui_color(B_CONTROL_MARK_COLOR);
+		rgb_color base = ui_color(B_PANEL_BACKGROUND_COLOR);
 		uint32 flags = be_control_look->Flags(this);
 		be_control_look->DrawSliderHashMarks(view, frame, frame, base,
 			fHashMarkCount, fHashMarks, flags, fOrientation);
